<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

<!--    <fragment-->
<!--        android:id="@+id/nav_home"-->
<!--        android:label="@string/mainpage_menu_home" />-->

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.surcreak.packidea.mainpage.ui.gallery.GalleryFragment"
        android:label="@string/mainpage_menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.surcreak.packidea.mainpage.ui.slideshow.SlideshowFragment"
        android:label="@string/mainpage_menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.surcreak.packidea.mainpage.ui.tools.ToolsFragment"
        android:label="@string/mainpage_menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.surcreak.packidea.mainpage.ui.share.ShareFragment"
        android:label="@string/mainpage_menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.surcreak.packidea.mainpage.ui.send.SendFragment"
        android:label="@string/mainpage_menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>